# emu8051

./: .gitignore  CMakeLists.txt
